Consolidate Java example into single Main.java file